force-app/main/default/objects/AirportCode__c/AirportCode__c.object-meta.xml
<CustomObject>
    <description>航站代碼，用於計算對團報表數據</description>
    <label>Airport Code</label>
    <nameField>
        <displayFormat>W-{00000}</displayFormat>
        <label>Airport Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Airport Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>