force-app/main/default/objects/AirportCode__c/fields/BoardingPass__c.field-meta.xml
<CustomField>
    <fullName>BoardingPass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boarding Pass</label>
    <type>Checkbox</type>
</CustomField>