force-app/main/default/objects/AirportCode__c/fields/E_BoardingPass__c.field-meta.xml
<CustomField>
    <fullName>E_BoardingPass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E-Boarding Pass</label>
    <type>Checkbox</type>
</CustomField>