force-app/main/default/objects/AirportCode__c/fields/GMT__c.field-meta.xml
<CustomField>
    <fullName>GMT__c</fullName>
    <defaultValue>0</defaultValue>
    <description>格林威治標準時間</description>
    <label>GMT</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>