force-app/main/default/objects/AirportCode__c/fields/USBoundFlights__c.field-meta.xml
<CustomField>
    <fullName>USBoundFlights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>US-Bound Flights</label>
    <type>Checkbox</type>
</CustomField>