force-app/main/default/objects/AirportCode__c/recordTypes/B2BAirportCode.recordType-meta.xml
<RecordType>
    <fullName>B2BAirportCode</fullName>
    <active>true</active>
    <label>B2B Airport Code</label>
</RecordType>