force-app/main/default/objects/AirportCode__c/recordTypes/Report.recordType-meta.xml
<RecordType>
    <fullName>Report</fullName>
    <active>true</active>
    <label>Report</label>
</RecordType>