force-app/main/default/objects/AirportCode__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>WaypointTaiwan__c</columns>
    <columns>WaypointOutside__c</columns>
    <columns>Area__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>