force-app/main/default/objects/AirportCode__c/listViews/Report_Airport_Code.listView-meta.xml
<ListView>
    <fullName>Report_Airport_Code</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Order__c</columns>
    <columns>NAME</columns>
    <columns>WaypointOutside__c</columns>
    <columns>WaypointTaiwan__c</columns>
    <columns>Area__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AirportCode__c.Report</value>
    </filters>
    <label>Report Airport Code</label>
</ListView>